--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	https://github.com/loglow/IntervalTimer.git
 	https://github.com/pedvide/ADC.git
 	https://github.com/nox771/i2c_t3.git
+	thomasfredericks/Bounce2@^2.56
