Added Menu namespace Added 'Menu::MenuItemType' enum Added 'Menu::MenuItem' class Added 'Menu::MenuList' class, wrapper for LinkedList

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	https://github.com/pedvide/ADC.git
 	https://github.com/nox771/i2c_t3.git
 	thomasfredericks/Bounce2@^2.56
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
